nueva lina de tiempo en historia.html

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -152,37 +152,19 @@
   </div>
 <!-- marco termina -->
 
-
-<!-- timeline -->
-<main class="container timeline d-none d-sm-block d-md-block">
-  <ol class="timeline row">
-    <li>2000
-      <span>
-        Se completó la colección Juvenil.
-      </span>
-    </li>
-    <li>2001 
-      <span>
-        Puesta en marcha del Sistema Integrado de Bibliotecas
-      </span>
-    </li>
-    <li>2002
-      <span>
-        Asume la Dirección Gloria Manriquez.
-      </span>  
-    </li>
-    <li>2003
-        <span>
-        Acuerdo de cooperación con las Naciones Unidas.
-      </span>
-    </li>
-    <li>2004
-        <span>
-        Desarrollo de servicios virtuales.
-      </span>
-    </li>
-  </ol>
+<!-- timeline nueva -->
+<main class="container timelinenew d-none d-sm-block d-md-block">
+  <div class="row">
+  <div>
+    <p>2000: Se completó la colección Juvenil. </p>
+  <p>2001: Puesta en marcha del Sistema Integrado de Bibliotecas </p>
+  <p>2002: Asume la Dirección Gloria Manriquez. </p>
+  <p>2010: Acuerdo de cooperación con las Naciones Unidas. </p>
+  <p>2020:  Desarrollo de servicios virtuales.</p>
+</div>
+  </div>
 </main>
+<!-- fin timeline nueva -->
 
 <!-- aside -->
 <aside class="container colores">
