--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&family=Quicksand&family=Roboto+Slab:wght@200&display=swap" rel="stylesheet">
-<!-- LETRACHINA -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@200&display=swap" rel="stylesheet">
-
 <!-- Favicon -->
     <link rel="shortcut icon" href="./images/logo6.png">
 <!-- Boxicons CSS para iconos de redes sociales -->
@@ -141,12 +136,13 @@
           <section class="redes">
             <div class="rosita"> 
               <!-- iconos de redes sociales -->
-                  <div class="d-flex flex-row-reverse">
-                      <div class="p-2"><i class='bx bx-rss bx-md bx-tada-hover'></i></div>
-                      <div class="p-2"><i class='bx bx-envelope bx-md bx-tada-hover'></i></div>
-                      <div class="p-2"><i class='bx bxl-instagram bx-md bx-tada-hover'></i></div>
-                      <div class="p-2"><i class='bx bxl-facebook bx-md bx-tada-hover'></i></div>
+                  <div class="d-flex flex-row-reverse"> 
+                      <div class="p-2"><a class="redes" href="https://www.youtube.com/watch?v=9geCkchqi04"><i class='bx bxl-youtube bx-md bx-tada-hover'></i></a></div>
+                      <div class="p-2"><a class="redes" href="random@random.com"><i class='bx bx-envelope bx-md bx-tada-hover'></i></a></div>
+                      <div class="p-2"><a class="redes" href="https://www.instagram.com/lalioficial/?hl=es"><i class='bx bxl-instagram bx-md bx-tada-hover'></i></a></div>
+                      <div class="p-2"><a class="redes" href="https://es-la.facebook.com/katyperry/"><i class='bx bxl-facebook bx-md bx-tada-hover'></i></a></div>                     
                   </div>
+                  <!-- fin iconos de redes sociales -->
                    <div class="row">
                       <div class="col-sm-6">                        
                     </div>      
