--- a/pages/calidad.html
+++ b/pages/calidad.html
@@ -125,12 +125,13 @@
           <section class="redes">
             <div class="rosita"> 
               <!-- iconos de redes sociales -->
-                  <div class="d-flex flex-row-reverse">
-                      <div class="p-2"><i class='bx bx-rss bx-md bx-tada-hover'></i></div>
-                      <div class="p-2"><i class='bx bx-envelope bx-md bx-tada-hover'></i></div>
-                      <div class="p-2"><i class='bx bxl-instagram bx-md bx-tada-hover'></i></div>
-                      <div class="p-2"><i class='bx bxl-facebook bx-md bx-tada-hover'></i></div>
-                  </div>
+              <div class="d-flex flex-row-reverse"> 
+                <div class="p-2"><a class="redes" href="https://www.youtube.com/watch?v=9geCkchqi04"><i class='bx bxl-youtube bx-md bx-tada-hover'></i></a></div>
+                <div class="p-2"><a class="redes" href="random@random.com"><i class='bx bx-envelope bx-md bx-tada-hover'></i></a></div>
+                <div class="p-2"><a class="redes" href="https://www.instagram.com/lalioficial/?hl=es"><i class='bx bxl-instagram bx-md bx-tada-hover'></i></a></div>
+                <div class="p-2"><a class="redes" href="https://es-la.facebook.com/katyperry/"><i class='bx bxl-facebook bx-md bx-tada-hover'></i></a></div>                     
+            </div>
+            <!-- fin iconos de redes sociales -->
                    <div class="row">
                       <div class="col-sm-6">                        
                     </div>      
