mejora animaciones gradiente

--- a/pages/calidad.html
+++ b/pages/calidad.html
@@ -159,7 +159,7 @@
 <!-- articulo con foto -->
 <aside class="organitograma"  data-aos="flip-left"> 
   <div>
-  <img src="../images/organigrama.jpg"" class="img-fluid col-md-6 float-md-end mb-3 ms-md-3" alt="Responsive image">
+  <img src="../images/organigrama.jpg" class="img-fluid col-md-6 float-md-end mb-3 ms-md-3" alt="Organigrama responsive">
    
     <br>
     <h4>Organigrama</h4>
