--- a/pages/historia.html
+++ b/pages/historia.html
@@ -148,10 +148,20 @@
 <div class="card card-body shadow-xl mx-3 mx-md-4 mt-n6">
   <div class="container">
     <div class="section text-center">
-      <h2 class="title container history">Nuestra historia</h2>
-    </div>
-  </div>
-<!-- marco termina -->
+<!-- comienzo dos columnas -->
+<div class="container text-center class2350">
+  <div class="row">
+   <div class="col-sm-6 col-md-5 col-lg-6"><h2 class="novedad">Historia de la BC:</h2></div>
+<!-- gif de bicho saltando desaparece en celulares  -->
+   <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0"><div class="col-sm-6 justify-content-end align-self-end d-none d-sm-block d-md-block">
+     <img class="oog-review-section__image bicho"  alt="Monster jumping" src="https://cdn.teachyourmonster.org/assets/oog/pages/rff/animation-f97a193a35de2c5bd09ec2d0a08cb37773083ca95dbd9bde9b81cf18ddbc708f.gif" width="50%"></div>
+ </div>
+</div>
+<!--fin dos columnas -->       
+</div>
+</div>
+</div>
+<!-- Fin de marco de toda la página -->  
 
 <!-- timeline nueva -->
 <main class="container timelinenew d-none d-sm-block d-md-block">
