--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Página web de una Biblioteca Universitaria">    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords"  content="HTML, CSS, SASS, BOOTSTRAP, BIBLIOTECA, BIBLIOTECA CENTRAL, UNIVERSIDAD, UNIVERSIDAD NACIONAL LOREM IPSUM, LIBROS, PÚBLICO">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <!-- Google fonts -->
