--- a/pages/historia.html
+++ b/pages/historia.html
@@ -3,6 +3,8 @@
 <head>
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="description" content="Página web de una Biblioteca Universitaria. La misión de la Biblioteca Central de la Universidad Nacional de Lorem es gestionar servicios de información y documentación pertinentes para el proceso de enseñanza / aprendizaje tal de satisfacer las necesidades de la comunidad universitaria (docentes, investigadores, alumnos y personal no docente de la UNL). Estos servicios incluyen la preservación y difusión de la producción científica y académica de la UNL, tal que la sociedad pueda beneficiarse de los conocimientos generados y desarrollados. Para acceder a la Biblioteca solicitamos consultar el catálogo de acceso en línea, con disponibilidad de material bibliográfico en formato digital e impreso.También pueden acceder a la Guía para usuarios en los cuales encontrará los tutoriales para acceder y consultar en forma virtual, recursos propios de la UNS y enlaces de interés de otras instituciones.">    
+      <meta name="keywords"  content="HTML, CSS, SASS, BOOTSTRAP, BIBLIOTECA, BIBLIOTECA CENTRAL, UNIVERSIDAD, UNIVERSIDAD NACIONAL LOREM IPSUM, LIBROS, PÚBLICO, Biblioteca en linea, biblioteca pública, novelas, bibliografía, Universidad Nacional, Argentina, Repositorio Institucional, Préstamo interbibliotecario">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -128,10 +130,10 @@
             <div class="rosita"> 
               <!-- iconos de redes sociales -->
               <div class="d-flex flex-row-reverse"> 
-                <div class="p-2"><a class="redes" href="https://www.youtube.com/watch?v=9geCkchqi04"><i class='bx bxl-youtube bx-md bx-tada-hover'></i></a></div>
-                <div class="p-2"><a class="redes" href="random@random.com"><i class='bx bx-envelope bx-md bx-tada-hover'></i></a></div>
-                <div class="p-2"><a class="redes" href="https://www.instagram.com/lalioficial/?hl=es"><i class='bx bxl-instagram bx-md bx-tada-hover'></i></a></div>
-                <div class="p-2"><a class="redes" href="https://es-la.facebook.com/katyperry/"><i class='bx bxl-facebook bx-md bx-tada-hover'></i></a></div>                     
+                <div class="p-2"><a class="redes" href="https://www.youtube.com/watch?v=9geCkchqi04" target="_blank"><i class='bx bxl-youtube bx-md bx-tada-hover'></i></a></div>
+                <div class="p-2"><a class="redes" href="mailto:random@correo.com" target="_blank"><i class='bx bx-envelope bx-md bx-tada-hover'></i></a></div>
+                <div class="p-2"><a class="redes" href="https://www.instagram.com/lalioficial/?hl=es" target="_blank"><i class='bx bxl-instagram bx-md bx-tada-hover'></i></a></div>
+                <div class="p-2"><a class="redes" href="https://es-la.facebook.com/katyperry/" target="_blank"><i class='bx bxl-facebook bx-md bx-tada-hover'></i></a></div>                     
             </div>
             <!-- fin iconos de redes sociales -->
                    <div class="row">
